--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,7 +17,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.122"
-        tools:srcCompat="@drawable/oval" />
+        tools:srcCompat="@drawable/bys" />
 
     <ImageView
         android:id="@+id/imageView2"
