added album cover

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,5 +7,6 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="gold">#D6A103</color>
+    <color name="gold">#ECC393</color>
+    <color name="light_grey">#9A7337</color>
 </resources>
